tests/paczka1/fuzzy1/88833782.err
Error in line 1: i@crcn A583 93,1
Error in line 2: i2crcn A583 81,4
Error in line 9: i2crcn A976 45,6
Error in line 10: bQTUURF A120 72,9
Error in line 12: i2crcn A583 94,7
Error in line 13: bQTUURF A976 17,0
Error in line 15: i2crcn A976 75,7
Error in line 20: B2hR4Ai A583 29,6
Error in line 27: bQTUURF A120 66,1
Error in line 26: yI9U A120 11,7
Error in line 34: yI9U A583 54,3
Error in line 37: yI9U A976 37,5
